lab1/Test/L1-A-3-51.cmm
struct {
}%x13A8J7GUdaUbMi ( ) {
  return - Sa8OBaQEbnDiPjGz5W + tTyVYsAkM0ZJXjQ + 
    o2iBcdfaI - S5vhXDH - kh4Qyw - JZFuuoMl5P8H5i5 + SXsOFTk 
    - C1Sf_Nqkz_kxxQ - I4 <= ~J > uxZLa8KHc6XyboV != _gCzzvQeTL6OJyBy9X 
    < ZBz3yQmaJg <= j3rPz7279EY_L && H2hLWxf_79rvN44zTs 
    && _yvEYMUqwGQqK || WV5sFeK4DAP ;
  if ( #oVnoloZJOArqFVXA )   CCqBlCiWXkuC &;

}
&+ 